--- a/plantao.html
+++ b/plantao.html
@@ -43,6 +43,7 @@
             <div class="plantao-creator">
                 <form id="create-plantao-form">
                     <input type="text" id="new-plantao-name" placeholder="Nome do novo plantão" required>
+                    <input type="number" id="new-plantao-ordem" placeholder="Ordem (ex: 1)" required style="width: 100px;">
                     <button type="submit">Criar Plantão</button>
                     <div class="form-group-checkbox">
                         <input type="checkbox" id="integra-plantao-checkbox">
